Moved search field down for smaller displays to fix overlap and moved header title to center

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -322,6 +322,7 @@ header {
 
   .search-form {
     margin-bottom:20px;
+    margin-top: 70px;
     &__field {
 
         position: absolute;
@@ -769,7 +770,7 @@ footer {
             }
 
             .navbar-brand {
-                display: inline-block;
+                display: contents;
                 padding-top: .3125rem;
                 padding-bottom: .3125rem;
                 margin-right: 1rem;
@@ -850,7 +851,7 @@ footer {
       }
 
       .navbar-brand {
-          display: inline-block;
+          display: contents;
           padding-top: .3125rem;
           padding-bottom: .3125rem;
           margin-right: 1rem;
